// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MainWrapper renders correctly with props 1`] = `
.emotion-0 {
  width: clamp(16rem, 90vw, 70rem);
  margin: 170px auto 100px;
  padding: 0 1.5rem;
}

.emotion-0 h1,
.emotion-0 h3 {
  font-weight: 400;
  padding-bottom: 1em;
}

<div>
  <main
    class="emotion-0"
  >
    <h1>
      Hello there!
    </h1>
  </main>
</div>
`;

exports[`MainWrapper renders correctly without props 1`] = `
.emotion-0 {
  width: clamp(16rem, 90vw, 70rem);
  margin: 170px auto 100px;
  padding: 0 1.5rem;
}

.emotion-0 h1,
.emotion-0 h3 {
  font-weight: 400;
  padding-bottom: 1em;
}

<div>
  <main
    class="emotion-0"
  />
</div>
`;
